tinker with header underlines.
The top-level content header now has a double-underline like it's
supposed to, and the 3rd-level header now has a light gray underline to
smooth the transition.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ h1
 	text-align: center;
 	border-style: none none double none;
 	border-color: black;
-	border-width: 1px;
+	border-width: 3px;
 	width: 100%;
 }
 
@@ -28,8 +28,8 @@ h2
 h3
 {
 	text-align: center;
-	border-style: none none dashed none;
-	border-color: black;
+	border-style: none none solid none;
+	border-color: lightgray;
 	border-width: 1px;
 	width: 100%;
 }
