redo the styling for the blockquote.
I didn't like how distracting the blockquote was before, since it would
interfere with the flow of reading, especially if there would be a lot
of blockquotes in an article.  The margins were also bugging me.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,10 +109,9 @@ img.float-right
 /* styling for a blockquote */
 blockquote
 {
-	background-color: #eee;
-	width: auto;
-	padding: 0.25em 1em;
-	margin: 1em 1em;
+	font-style: italic;
+	padding: 0 1em;
+	margin: 1em 0;
 	border-style: none none none solid;
 	border-color: #666;
 }
