move site title to top of page.
The header has been moved to the top of the page, and the navbar has
been reconfigured to be more efficient and to take up the full width of
the page, so as to create a more visually balanced site layout.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,4 @@
 <header>
-	
-	<div class = "column">{% for item in site.data.navigation %}<a href = "{{ item.link }}" {% if page.url == item.link %}class = "current"{% endif %}>{{ item.name }}</a>{% endfor %}</div><div class = "column"><strong>{{ site.title }}</strong></div>
+	{% for item in site.data.navigation %}<a href = "{{ item.link }}" {% if page.url == item.link %}class = "current"{% endif %}>{{ item.name }}</a>{% endfor %}
 
 </header>
