add the site description under the title.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,9 @@
 
 	<body>
 
-		<h1 id = "top">{{ site.title }}</h1>
+		<h1 class = "title" id = "top">{{ site.title }}</h1>
+
+		<p class = "subtitle">{{ site.description }}</p>
 
 		{% include header.html %}
 
