add an attribution notice to the default layout.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,14 @@
 		<section>
 		{{ content }}
 
-		<a href = "#top">Back to top</a>.
+		<p><a href = "#top">Back to top</a>.</p>
+
+		<p style = "text-align: center;">
+			<small>This website is maintained by
+			<a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>
+			<br />
+			Hosted by GitHub Pages</small>
+		</p>
 		</section>
 
 	</body>
