--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ body
 {
 	background-color: white;
 	color: black;
+	font-family: sans-serif;
 }
 
 /* top-level headers are centered & have a double underline */
